# blinkmojt

./: .gitignore  blinkmojt.h  udpmojt.py
dummy/: libdummymojt.c  makefile
emulator/: Cargo.toml
emulator/examples/: demo.rs
emulator/src/: capi.rs  lib.rs  pixels_backend.rs  udp_backend.rs
terminalmojt/: libterminalmojt.c  makefile
test/: makefile  test.c
