[package]
name = "blinkemu"
version = "0.1.0"
edition = "2021"

[lib]
name = "blinkemu"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
log = "0.4"
pixels = "0.11.0"
winit = "0.27"
winit_input_helper = "0.13"
env_logger = "0.10.0"
